AUTOMAKE_OPTIONS=subdir-objects

ipvisualizer_displayprgdir=$(prefix)/bin/
ipvisualizer_displayprg_PROGRAMS=ipvisualizer_display
ipvisualizer_display_SOURCES=constants.c datapoint.c display.c fwrules.c subnets.c text.c video.c ../shared/flowdata.c ../shared/config.c constants.h datapoint.h pixelmapping.h subnets.h text.h video.h ../shared/config.h ../shared/flowdata.h
